crates/query-engine/translation/tests/snapshots/tests__dup_array_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  ISNULL([10_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      JSON_QUERY([1_RELATIONSHIP_albums].[json], '$') AS [albums],
      JSON_QUERY([2_RELATIONSHIP_Albums].[json], '$') AS [Albums]
    FROM
      [public].[Artist] AS [0_Artist]
      OUTER APPLY (
        SELECT
          ISNULL([4_rows].[row_json], '[]') AS [rows]
        FROM
          (
            SELECT
              [3_Album].[Title] AS [title]
            FROM
              [public].[Album] AS [3_Album]
            WHERE
              ([0_Artist].[ArtistId] = [3_Album].[ArtistId]) FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [4_rows]([row_json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [1_RELATIONSHIP_albums]([json])
      OUTER APPLY (
        SELECT
          ISNULL([7_rows].[row_json], '[]') AS [rows]
        FROM
          (
            SELECT
              [6_Album].[Title] AS [title]
            FROM
              [public].[Album] AS [6_Album]
            WHERE
              ([0_Artist].[ArtistId] = [6_Album].[ArtistId]) FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [7_rows]([row_json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [2_RELATIONSHIP_Albums]([json])
    ORDER BY
      [0_Artist].[ArtistId] ASC OFFSET 0 ROWS FETCH NEXT 5 ROWS ONLY FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [10_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
