crates/query-engine/translation/tests/snapshots/tests__it_aggregate_distinct_albums.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  JSON_QUERY([3_aggregates].[aggregates], '$') AS [aggregates]
FROM
  (
    SELECT
      COUNT(DISTINCT [0_Album].[ArtistId]) AS [how_many_distinct_artist_ids]
    FROM
      [public].[Album] AS [0_Album] FOR JSON PATH,
      INCLUDE_NULL_VALUES,
      WITHOUT_ARRAY_WRAPPER
  ) AS [3_aggregates]([aggregates]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
