crates/query-engine/translation/tests/snapshots/tests__it_aggregate_function_albums.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  JSON_QUERY([3_aggregates].[aggregates], '$') AS [aggregates]
FROM
  (
    SELECT
      max([0_Album].[ArtistId]) AS [max_artist_id]
    FROM
      [public].[Album] AS [0_Album] FOR JSON PATH,
      INCLUDE_NULL_VALUES,
      WITHOUT_ARRAY_WRAPPER
  ) AS [3_aggregates]([aggregates]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
