crates/query-engine/translation/tests/snapshots/tests__it_select_where_related_exists.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  ISNULL([7_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      [0_artist].[Name] AS [title],
      JSON_QUERY([1_RELATIONSHIP_albums].[json], '$') AS [albums]
    FROM
      [public].[Artist] AS [0_artist]
      OUTER APPLY (
        SELECT
          ISNULL([3_rows].[row_json], '[]') AS [rows]
        FROM
          (
            SELECT
              [2_album].[Title] AS [title]
            FROM
              [public].[Album] AS [2_album]
            WHERE
              ([0_artist].[ArtistId] = [2_album].[ArtistId]) FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [3_rows]([row_json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [1_RELATIONSHIP_albums]([json])
    WHERE
      EXISTS (
        SELECT
          1 AS [one]
        FROM
          [public].[Album] AS [5_album]
        WHERE
          (
            ([5_album].[Title] LIKE @P1)
            AND ([0_artist].[ArtistId] = [5_album].[ArtistId])
          )
      ) FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [7_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[(1, String("Supernatural"))]
