crates/query-engine/translation/tests/snapshots/tests__it_select_where_string.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  ISNULL([2_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      [0_Album].[AlbumId] AS [AlbumId]
    FROM
      [public].[Album] AS [0_Album]
    WHERE
      ([0_Album].[Title] IN (@P1, @P2)) FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [2_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[(1, String("Mozart: Chamber Music")), (2, String("Something else"))]
