crates/query-engine/translation/tests/snapshots/tests__it_select_where_unrelated_exists.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  ISNULL([3_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      [0_album].[Title] AS [title]
    FROM
      [public].[Album] AS [0_album]
    WHERE
      EXISTS (
        SELECT
          1 AS [one]
        FROM
          [public].[Artist] AS [1_artist]
        WHERE
          (
            (
              1 = 1
              AND ([1_artist].[Name] = cast(@P1 as varchar))
            )
            AND ([0_album].[ArtistId] = [1_artist].[ArtistId])
          )
      ) FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [3_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[(1, String("Gilberto Gil"))]
