crates/query-engine/translation/tests/snapshots/tests__it_simple_array_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  ISNULL([6_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      JSON_QUERY([1_RELATIONSHIP_Albums].[json], '$') AS [Albums]
    FROM
      [public].[Artist] AS [0_Artist]
      OUTER APPLY (
        SELECT
          ISNULL([3_rows].[row_json], '[]') AS [rows]
        FROM
          (
            SELECT
              [2_Album].[Title] AS [title]
            FROM
              [public].[Album] AS [2_Album]
            WHERE
              ([0_Artist].[ArtistId] = [2_Album].[ArtistId]) FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [3_rows]([row_json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [1_RELATIONSHIP_Albums]([json])
    ORDER BY
      [0_Artist].[ArtistId] ASC OFFSET 0 ROWS FETCH NEXT 5 ROWS ONLY FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [6_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
