crates/query-engine/translation/tests/snapshots/tests__it_simple_object_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  ISNULL([6_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      JSON_QUERY([1_RELATIONSHIP_Artist].[json], '$') AS [Artist]
    FROM
      [public].[Album] AS [0_Album]
      OUTER APPLY (
        SELECT
          ISNULL([3_rows].[row_json], '[]') AS [rows]
        FROM
          (
            SELECT
              [2_Artist].[Name] AS [Name]
            FROM
              [public].[Artist] AS [2_Artist]
            WHERE
              ([0_Album].[ArtistId] = [2_Artist].[ArtistId]) FOR JSON PATH,
              INCLUDE_NULL_VALUES
          ) AS [3_rows]([row_json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [1_RELATIONSHIP_Artist]([json])
    ORDER BY
      [0_Album].[AlbumId] ASC OFFSET 0 ROWS FETCH NEXT 5 ROWS ONLY FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [6_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
