crates/query-engine/translation/tests/snapshots/tests__nested_aggregates.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  ISNULL([6_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      [0_Artist].[Name] AS [Name],
      JSON_QUERY([1_RELATIONSHIP_Albums].[json], '$') AS [Albums]
    FROM
      [public].[Artist] AS [0_Artist]
      OUTER APPLY (
        SELECT
          JSON_QUERY(ISNULL([3_rows].[row_json], '[]'), '$.row_json') AS [rows],
          JSON_QUERY(
            JSON_VALUE([4_aggregates].[agg_json], '$.agg_json'),
            '$'
          ) AS [aggregates]
        FROM
          (
            SELECT
              *
            FROM
              (
                SELECT
                  [2_Album].[Title] AS [Title]
                FROM
                  [public].[Album] AS [2_Album]
                WHERE
                  ([0_Artist].[ArtistId] = [2_Album].[ArtistId]) FOR JSON PATH,
                  INCLUDE_NULL_VALUES
              ) AS [1_RELATIONSHIP_Albums]([row_json]) FOR JSON PATH,
              INCLUDE_NULL_VALUES,
              WITHOUT_ARRAY_WRAPPER
          ) AS [3_rows]([row_json])
          CROSS JOIN (
            SELECT
              *
            FROM
              (
                SELECT
                  COUNT(*) AS [how_many_albums]
                FROM
                  [public].[Album] AS [2_Album]
                WHERE
                  ([0_Artist].[ArtistId] = [2_Album].[ArtistId]) FOR JSON PATH,
                  INCLUDE_NULL_VALUES,
                  WITHOUT_ARRAY_WRAPPER
              ) AS [4_aggregates]([agg_json]) FOR JSON PATH,
              INCLUDE_NULL_VALUES,
              WITHOUT_ARRAY_WRAPPER
          ) AS [4_aggregates]([agg_json]) FOR JSON PATH,
          INCLUDE_NULL_VALUES,
          WITHOUT_ARRAY_WRAPPER
      ) AS [1_RELATIONSHIP_Albums]([json])
    ORDER BY
      [0_Artist].[ArtistId] ASC OFFSET 1 ROWS FETCH NEXT 5 ROWS ONLY FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [6_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
